force-app/main/default/objects/Ramp_Credential__mdt/Ramp_Credential__mdt.object-meta.xml
<CustomObject>
    <label>Ramp Credential</label>
    <pluralLabel>Ramp Credentials</pluralLabel>
</CustomObject>