force-app/main/default/objects/Ramp_Credential__mdt/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <defaultValue>"https://api.ramp.com"</defaultValue>
    <label>API Base URL</label>
    <type>Url</type>
</CustomField>