force-app/main/default/objects/Ramp_Credential__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>