force-app/main/default/objects/Ramp_Credential__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <defaultValue>&quot;transactions:read accounting:write&quot;</defaultValue>
    <label>Scopes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>