force-app/main/default/objects/Ramp_Credential__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <defaultValue>"https://api.ramp.com/developer/v1/token"</defaultValue>
    <label>Token URL</label>
    <type>Url</type>
</CustomField>